--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  hoge
+  <canvas id="main_canvas"></canvas>
   <script src="scripts/Tiny2D.js"></script>
   <script src="scripts/main.js"></script>
 </body>
